[package]
name = "canvas_nanovg"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
font-kit = "0.6"
gl = "0.14"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.log]
version = "0.4"
features = ["release_max_level_info"]

[dependencies.pathfinder_canvas]
path = "../../canvas"
features = ["pf-text"]

[dependencies.pathfinder_color]
path = "../../color"

[dependencies.pathfinder_content]
path = "../../content"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_renderer]
path = "../../renderer"

[dependencies.pathfinder_resources]
path = "../../resources"

[dependencies.pathfinder_simd]
path = "../../simd"

[dependencies.surfman]
git = "https://github.com/pcwalton/surfman"
rev = "bc29e7ae88ca7dd64d3b1c7e185604693290207f"
features = ["sm-winit"]

[dependencies.winit]
version = "<0.19.4" # 0.19.4 causes build errors https://github.com/rust-windowing/winit/pull/1105

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.3"
